--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -38,7 +38,7 @@ ENV HELM_VERSION v3.3.1
 ENV KUSTOMIZE_VERSION v3.5.4
 
 # System charts minimal version
-ENV CATTLE_FLEET_MIN_VERSION=0.3.900
+ENV CATTLE_FLEET_MIN_VERSION=0.3.1000-security1+up0.3.9
 ENV CATTLE_RANCHER_OPERATOR_MIN_VERSION=0.1.500
 ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=0.1.600-rc2
 
