--- a/tests/v2/validation/Dockerfile.validation
+++ b/tests/v2/validation/Dockerfile.validation
@@ -1,8 +1,8 @@
 FROM golang:1.19
 
 # Configure Go
-ENV GOPATH /go
-ENV PATH ${PATH}:/go/bin
+ENV GOPATH /root/go
+ENV PATH ${PATH}:/root/go/bin
 
 ENV WORKSPACE ${GOPATH}/src/github.com/rancher/rancher
 # configure VPN
