--- a/tests/v2/validation/Jenkinsfile
+++ b/tests/v2/validation/Jenkinsfile
@@ -1,6 +1,6 @@
 #!groovy
 node {
-    def rootPath = "/go/src/github.com/rancher/rancher/tests/v2/validation/"
+    def rootPath = "/root/go/src/github.com/rancher/rancher/tests/v2/validation/"
     def job_name = "${JOB_NAME}"
     if (job_name.contains('/')) { 
       job_names = job_name.split('/')
@@ -104,7 +104,7 @@ node {
                   def configContents = env.CONFIG
 
                   writeFile file: filename, text: configContents
-                  env.CATTLE_TEST_CONFIG = "/go/src/github.com/rancher/rancher/tests/v2/validation/"+filename
+                  env.CATTLE_TEST_CONFIG = rootPath+filename
                 }
 
                 sh "./tests/v2/validation/configure.sh"
@@ -113,7 +113,7 @@ node {
               stage('Run Validation Tests') {
                 try {
                   sh "docker run --name ${testContainer} -t --env-file ${envFile} " +
-                  "${imageName} sh -c \"/go/bin/gotestsum --format standard-verbose --packages=${testsDir} --junitfile ${testResultsOut} -- ${GOTEST_TESTCASE} -timeout=${timeout} -v\""
+                  "${imageName} sh -c \"/root/go/bin/gotestsum --format standard-verbose --packages=${testsDir} --junitfile ${testResultsOut} -- ${GOTEST_TESTCASE} -timeout=${timeout} -v\""
                 } catch(err) {
                   echo 'Test run had failures. Collecting results...'
                 }
