--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -16,7 +16,7 @@ WORKDIR /var/lib/rancher
 ARG ARCH=amd64
 ARG IMAGE_REPO=rancher
 ARG SYSTEM_CHART_DEFAULT_BRANCH=release-v2.7
-ARG CHART_DEFAULT_BRANCH=release-v2.7
+ARG CHART_DEFAULT_BRANCH=release-v2.7.3
 ARG PARTNER_CHART_DEFAULT_BRANCH=main
 ARG RKE2_CHART_DEFAULT_BRANCH=main
 # kontainer-driver-metadata branch to be set for specific branch other than dev/master, logic at rancher/rancher/pkg/settings/setting.go
@@ -54,7 +54,7 @@ ENV CATTLE_SYSTEM_UPGRADE_CONTROLLER_CHART_VERSION 102.0.0+up0.4.0
 
 # System charts minimal version
 ENV CATTLE_FLEET_MIN_VERSION=102.0.0+up0.6.0
-ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=2.0.2+up0.3.2
+ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=2.0.3+up0.3.3-rc4
 ENV CATTLE_CSP_ADAPTER_MIN_VERSION=2.0.1
 
 RUN mkdir -p /var/lib/rancher-data/local-catalogs/system-library && \
