--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -56,7 +56,9 @@ ENV CATTLE_SYSTEM_UPGRADE_CONTROLLER_CHART_VERSION 102.1.0+up0.5.0
 
 # System charts minimal version
 ENV CATTLE_FLEET_MIN_VERSION=102.1.0+up0.7.0-rc.3
-ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=2.0.5+up0.3.5-rc5
+# Deprecated.
+ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=''
+ENV CATTLE_RANCHER_WEBHOOK_VERSION=2.0.5+up0.3.5-rc5
 ENV CATTLE_CSP_ADAPTER_MIN_VERSION=2.0.2+up2.0.2-rc2
 
 RUN mkdir -p /var/lib/rancher-data/local-catalogs/system-library && \
