--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -55,7 +55,7 @@ ENV CATTLE_SYSTEM_UPGRADE_CONTROLLER_CHART_VERSION 100.0.3+up0.3.3
 
 # System charts minimal version
 ENV CATTLE_FLEET_MIN_VERSION=100.2.3+up0.5.3
-ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=1.0.8+up0.2.9
+ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=1.0.9+up0.2.10-rc2
 ENV CATTLE_CSP_ADAPTER_MIN_VERSION=1.0.1
 
 RUN mkdir -p /var/lib/rancher-data/local-catalogs/system-library && \
