Improving default for PSP options
Improves the default for global.cattle.psp.enabled to not require manual
user override on k8s 1.25

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -172,4 +172,6 @@ readinessProbe:
 global:
   cattle:
     psp:
-      enabled: true #PSPs enablement should default to true
+      # will default to true on 1.24 and below, and false for 1.25 and above
+      # can be changed manually to true or false to bypass version checks and force that option
+      enabled: "" 
