renovate: create PRs only if tests pass Avoid the creation of PRs when the CI checks fail, this configuration better aligns with a limited amount of concurrent PRs.
Signed-off-by: Paulo Gomes <paulo.gomes@suse.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,5 +6,6 @@
     "release/v2.7"
   ],
   "prHourlyLimit": 2,
-  "prConcurrentLimit": 4
+  "prConcurrentLimit": 4,
+  "prCreation": "status-success"
 }
