--- a/package/Dockerfile.agent
+++ b/package/Dockerfile.agent
@@ -19,6 +19,9 @@ RUN curl -sLf https://github.com/rancher/loglevel/releases/download/${LOGLEVEL_V
 ARG VERSION=dev
 LABEL io.cattle.agent true
 ENV AGENT_IMAGE rancher/rancher-agent:${VERSION}
+ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=''
+# For now, this value needs to be manually synced with the one in the main Dockerfile. This pins downstream webhook's version.
+ENV CATTLE_RANCHER_WEBHOOK_VERSION=2.0.5+up0.3.5-rc7
 ENV SSL_CERT_DIR /etc/kubernetes/ssl/certs
 COPY --from=rancher /var/lib/rancher-data /var/lib/rancher-data
 COPY --from=rancher /usr/bin/tini /usr/bin/
