CI test: run with the SP5 golang container
This should make absolutely no difference whatsoever. Just testing,
not for merging

--- a/tests/v2/codecoverage/Dockerfile.buildcodecoverage
+++ b/tests/v2/codecoverage/Dockerfile.buildcodecoverage
@@ -1,4 +1,4 @@
-FROM registry.suse.com/bci/golang:1.20
+FROM registry.opensuse.org/devel/bci/sle-15-sp5/containerfile/bci/golang:1.20
 
 # Configure Go
 ENV GOPATH /root/go
