change ingress rule pathType to Prefix to ensure compatibility with different ingress class
Signed-off-by: Ricky Hariady <ricky@sense-os.nl>

--- a/chart/tests/ingress_test.yaml
+++ b/chart/tests/ingress_test.yaml
@@ -236,5 +236,5 @@ tests:
                   name: RELEASE-NAME-rancher
                   port:
                     number: 80
-              pathType: ImplementationSpecific
+              pathType: Prefix
               path: /
